Give grid container fixed height and width. Align grid to the center.

--- a/style.css
+++ b/style.css
@@ -10,4 +10,13 @@ button {
 
 .button_container {
     justify-content: center;
+    display: flex;
+}
+
+.container {
+    display: flex;
+    flex-direction: column;
+    height: 960px;
+    width: 960px;
+    margin: auto;
 }
